# PscApplication

./: .gitignore  CLAUDE.md  PRODUCTION_TRACKER.md  docker-compose.yml
PSCApp/: .djinit  .dockerignore  .env.sample  .gitignore  Dockerfile  Procfile  README.md  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
PSCApp/.github/workflows/: ci.yml
PSCApp/docs/: GoogleAuthSetup.md  Nur_Readme.md  PRODUCTION_CHECKLIST.md  Setup.md  Types.md
PSCApp/src/: apps.py  asgi.py  celery.py  consumers.py  signals.py  tasks.py  urls.py  wsgi.py
PSCApp/src/admin/: __init__.py  analytics.py  app_settings.py  attempt_answer.py  branch.py  custom_admin.py  mocktest.py  note.py  notification.py  platform_stats.py  question_answer.py  time_config.py  user.py  user_stats.py
PSCApp/src/api/: permissions.py  urls.py
PSCApp/src/api/analytics/: serializers.py  views.py
PSCApp/src/api/app_settings/: serializers.py  views.py
PSCApp/src/api/attempt_answer/: serializers.py  views.py
PSCApp/src/api/auth/: views.py
PSCApp/src/models/: __init__.py  analytics.py  app_settings.py  attempt_answer.py  branch.py  mocktest.py  note.py  notification.py  platform_stats.py  question_answer.py  time_config.py  user.py  user_stats.py
PSCApp/src/seed_data/: __init__.py  branches.py  categories.py  constants.py  generators.py  mock_tests.py  time_configs.py
PSCApp/src/services/: push.py
PSCApp/src/settings/: base.py  development.py  production.py
PSCApp/src/templates/: base.html
PSCApp/src/tests/: test_phase1.py  test_tasks.py
frontend/: .gitignore  (+5 more)
(+283 files in other folders)
